--- a/outline.yml
+++ b/outline.yml
@@ -79,26 +79,186 @@
           - Drupal, PHP, Maria for content management com via FastCGI
           - Phoenix, Cowboy for app serving
       - tips| How to talk Elixir
+        - iex
         - https://www.youtube.com/watch?v=pBNOavRoNL0
-        - mix
+          - 03:50 Data Types
+            - is_int
+              - no maximum size
+            - is_float
+            - is_atom
+              - ``` Atom \#{is_atom(:Drupal)}```
+              - ``` Atom \#{is_atom(:"Drupal dot Org")}```
+            - ranges
+              ``` one_to_ten 1..10```
+          - 06:38 Strings
+            - double quotes ``` string = "Hello World!"```
+            - String Length ``` String.length("Hello World!") ``` => 12
+            - String concatination ``` "Hello" <> " " <> "World!"" ```
+            - String search ``` String.contains?("foobar", "foo") ``` => true
+            - String first char ``` String.first("foobar") ``` => "f"
+            - String char at index ``` String.at("foobar", 3) ``` => "b"
+            - String substring ``` String.slice("foobar", 3, 5) ``` => "bar"
+            - String explode ``` String.split("foobar", "b") ``` => ["foo", "oo"]
+            - String explode ``` String.revers("foobar", "b") ``` => ["foo", "oo"]
+            - String explode ``` String.upcase("foobar", "b") ``` => ["foo", "oo"]
+            - String explode ``` String.downcase("foobar", "b") ``` => ["foo", "oo"]
+            - String explode ``` String.capitalize("foobar", "b") ``` => ["foo", "oo"]
+          - 12:44 Math
+            - + - * /
+            - integer division
+              - ```div(5, 4)``` => 1
+              - ```rem(5, 4)``` => 1
+          - 13:30 Comparison
+            - Data is typed
+              - int vs float
+                - ``` 7 == 7.0``` => true
+                - ``` 7 === 7.0``` => false
+            - and the rest
+              - "> < <= >="
+              - and or NOT && ||
+          - 16:06 Decision Making
+            - if age >= 18 do \
+                "can vote" \
+              else
+                "cannot vote"
+              end
+            - unless age === 18 do
+                "You are 18"
+              else
+              end
+            - switch like statements
+              - case some_variable do
+                  1 -> "something"
+                  2 -> "something else"
+                  3 -> "something completely different"
+                end
+              - cond do
+                  age >= 18 -> "can vote"
+                  age >= 16 -> "can drive"
+                  age >= 14 -> "cannot drive"
+                  true -> "default"
+                end
+            - Ternatry
+              - Just an if/else on one line
+          - 23:15 Tuples
+            - 2 to 4 values
+            - not for enumerating, cannot use as a list
+            - ``` is_tuple({1, 3.14, :Drupal}) ``` => true
+            - append ```new_tuple = Tuple.append(old_tuple, 66) ```
+            - get element ```el = elem(some_tuple, 2) ```
+            - delete element ```new_tuple = Tuple.delete_at(old_tuple, 2) ```
+            - insert element ```new_tuple = Tuple.insert_at(old_tuple, 2, "foobar") ```
+            - get size ```new_tuple = tuple_size(old_tuple) ``` => 3
+            - bunch of elements ``` eleven_nines = Tuple.duplicate(9, 11)```
+            - ``` {name, quest, color} = {"Robin", "To find the holy grail", "red, no blue"}```
+            - ``` IO.puts("favorite \#{color}")``` => "red, no blue"
+          - 28:16 Lists
+            - ```[1,2,3]```
+            - list concatination ```[1,2,3] ++ [4,5,6]```
+            - list subtraction ```list3 = list1 -- list2```
+            - search
+              - if 4 in list3 do end
+            - first and everything lese
+              - ```[head | tail] = list1``` => 1, [2, 3]
+            - Enumerate through list
+              - ``` Enum.each ["words", "in", "list"], fn word ->
+                      IO.puts word
+                    end
+                ```
+            - List.insert_at
+            - List.delete_at
+            - List.first
+            - List.last
+            - A list can also be a key value pair with tuples.
+              - ``` list = [{name:} "Robin", {quest:} "To find the holy grail"] ```
+              - remove the curly braces
+          - 36:40 Maps
+            - Like dictionaries
+              - ``` map = %{"key" => "value", "key2" => "value2"}```
+          - 39:33 Pattern Matching
+          - 41:01 Anonymous Functions
+            - normal syntax, should be familiar
+              - ```add_things = fn (a, b) -> a + b end```
+            - short syntax
+              - ```add_things = &(&1 + &2)```
+            - one function many definitions
+              - ``` add_things = fn
+                      {a, b} -> a + b
+                      {a, b, c} -> a + b + c
+                    end```
+              - ```add_things.({1, 2})
+          - 45:52 Recursion
+            - ``` def print_list([element|list]) do
+                    IO.puts element
+                    print_list(list)
+                  end
+                    def print_list([]), {do:} nil
+                    remove the curly brackets
+              ```
+          - 48:48 Looping
+            - There is no looping, You will need to use recursion or Enumerables
+          - 53:05 Enumerables
+            - Enum.each
+            - Enum.map
+            - Enum.reduce([], fn)
+            - Enum.uniq([])
+          - 58:19 List Comprehensions
+            - ```even_list = for n <- [1,2,3,4,5,6], rem(n,2) == 0, {do:} n```
+            - remeber that the last statement is always returned from a function
+          - 59:53 Exception Handling
+          - 1:01:21 Concurrency
+            - spawn(fn() -> do_stuff("foobar") end)
+            - send(self(), {:greeting, "Robin"})
+            - recieve do
+                {:greeting, name} -> IO.puts "Hello \#{name}"
+                {:farewell, name} -> IO.puts "Goodbye \#{name}"
+              after
+                500 -> IO.puts "I didn't want to talk to you anyway!"
+              end
+        - mix https://elixir-lang.org/getting-started/mix-otp/introduction-to-mix.html
+          - This is the built in build tool for elixir, liken to npm or composer
+          - But with other generators built in
+            - Think Drupal console and composer mixed together and fully supported as native parts of the language
         - rebar
+          - Kind of like mix, but for Erlang.
+          - Technically Rebar3
         - unit tests
+          - ExUnit - built in unit test framework
+        - Hex Packages
         - documentation
+          - https://hexdocs.pm/
+          - Hexdocs is a place for hex packages to host their documentation
         - pattern matching
-          - https://youtu.be/gom6nEvtl3U?t=1159
-          - you don't need to use switch or if as much for branching
+          - How many people here are familiar with Drupal 7 and hook based development?
+            - remember how we would do this?
+              - ``` function example_login_form_form_alter($form, $form_state) ```
+            - Pattern matching makes this a part of the language in an interesting way.
+              - https://youtu.be/gom6nEvtl3U?t=1159
+              - you don't need to use switch or if as much for branching
+            - So (hook alter example) becomes
+              - ``` def hook_alter(form_id = 'login_form', form, _form_state) ```
         - pipes
           - https://youtu.be/gom6nEvtl3U?t=1308
           - wraps the paramaters to wrapping functions
+          - so ```$array = reset(array_keys($old_array)) ```
+            - would become ```$old_array |> array_keys, reset ```
         - ubmbrella
+          - An umbrella app is an app that surrounds other apps
         - module
           - no classes only module namespaces
         - function
           - pattern matching
           - underscores are ignored by compiler
+          - default values with double backslash \\
+            - ``` def somefunc(foo \\ "bar") do
+                    IO.puts foo
+                  end```
         - arity
         - Mod.fun/arity
         - OTP
+          - Open Telecom Platform
+          - gives us supervision trees, event managers, and other goodness.
+          - Basically all of the Erlang Platform.
         - GenServer
           - PID
           - cast
@@ -115,6 +275,8 @@
           - Framework build on Elixir
           - app vs app_web | seperate the frontend code from the web frontent
           - context | Dedicated modules that expose related functionallity
+        - Meta-programming
+          - This is what many of the features of Elixir that I just talked about is built on. It is a way to add syntactical sugar without changing the whole language.
     - conclusion
       - reenforcement
       - conclusion
