Added list comp and deployment content.

--- a/outline.yml
+++ b/outline.yml
@@ -409,6 +409,8 @@
       file: tips-features-supervisor.md
     - tips-features-meta:
       file: tips-features-meta.md
+    - tips-distillery:
+      file: tips-distillery.md
 
   # Conclusion.
     - reenforcement slide:
